--- a/app/views/user_mailer/alarm_email.html.erb
+++ b/app/views/user_mailer/alarm_email.html.erb
@@ -4,14 +4,12 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h1>Welcome to example.com, <%= @user.name %></h1>
+    <% url = list_event_url(@health.event_id) %>
     <p>
-      You have successfully signed up to example.com,
-      your username is: <%= @user.login %>.<br/>
+      <%= @message %><br/>
     </p>
     <p>
-      To login to the site, just follow this link: <%= @url %>.
+      To view the last event for this branch <%= @health.branch %>, just follow this link: <%= url %>.
     </p>
-    <p>Thanks for joining and have a great day!</p>
   </body>
 </html>
