--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -9,6 +9,6 @@
     <a href="/configure"><img src="assets/home-config.png" /></a>
   </div>
   <div class="equal">
-    <a href="/events"><img src="assets/home-health.png" /></a>
+    <a href="/health"><img src="assets/home-health.png" /></a>
   </div>
 </section>
