--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>TestIvr</title>
+  <META HTTP-EQUIV="refresh" CONTENT="60" />
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag 'application.js' %>
   <%= javascript_include_tag 'main.js' %>
