--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,9 +2,10 @@
 <html>
 <head>
   <title>TestIvr</title>
-  <META HTTP-EQUIV="refresh" CONTENT="60" />
+  <!-- <META HTTP-EQUIV="refresh" CONTENT="60" /> -->
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag 'application.js' %>
+  <%= javascript_include_tag 'jquery.form.js' %>
   <%= javascript_include_tag 'main.js' %>
   <%= stylesheet_link_tag "as_overrides" %>
   <%= csrf_meta_tags %>
