--- a/app/views/templates/new.html.erb
+++ b/app/views/templates/new.html.erb
@@ -1,3 +1,9 @@
 <%= render :partial=>'upload', 
    :locals=>{:template=>@template, 
    :prompt=>"#{@template.name.titleize} MP3" } %>
+<script>
+  jQuery(document).ready(function () { 
+  // pass forum type
+    reportUpload.init("<%= @template.class.name.downcase %>");
+  });
+</script>
