--- a/app/views/branch/index.html.erb
+++ b/app/views/branch/index.html.erb
@@ -10,7 +10,7 @@
   </p>
   <p>
   <%= radio_button_tag 'forum_type', 'report' %>&nbsp;Report
-  <%= radio_button_tag 'forum_type', 'bulleting' %>&nbsp;Bulletin Board
+  <%= radio_button_tag 'forum_type', 'bulletin' %>&nbsp;Bulletin Board
   </p>
   <p id="return-msg" class="notice"></p>
   <p>
