--- a/app/views/templates/index.html.erb
+++ b/app/views/templates/index.html.erb
@@ -2,15 +2,8 @@
   <h2><%= @branch.forum_type.titleize %></h2>
   <input type="hidden" name="branch" id="branch-name" value="<%=@branch_name%>" />
   <div id="introduction" class="square">Intro</div>
-  <% if @headline %>
-  <div id="headline" class="square"><%= @headline %></div>
-  <% end %>
-  <% if @question %>
-  <div id="bulletin_question" class="square"><%= @question %></div>
-  <% end %>
-  <% if @goodbye %>
-  <div id="goodbye" class="square"><%= @goodbye %></div>
-  <% end %>
+  <%= render :partial => @branch.forum_type %>
+
 </div>
 <div id="forum-upload" class="float-left">
   
