--- a/app/views/templates/_report.html.erb
+++ b/app/views/templates/_report.html.erb
@@ -1,2 +1,3 @@
+<div id="introduction" class="square">Intro</div>
 <div id="headline" class="square"><%= @headline %></div>
 <div id="goodbye" class="square"><%= @goodbye %></div>
