--- a/app/views/templates/_bulletin.html.erb
+++ b/app/views/templates/_bulletin.html.erb
@@ -1,3 +1,4 @@
+<div id="introduction" class="square">Intro</div>
 <div id="bulletin_question" class="square"><%= @question %></div>
 <!--
 <div id="listen_bulletin_board" class="square"><%= @listen_bulletin %></div>
