--- a/app/views/templates/index.html.erb
+++ b/app/views/templates/index.html.erb
@@ -1,8 +1,8 @@
 <div id="forum-template" class="float-left">
   <h2><%= @branch.forum_type.titleize %></h2>
   <input type="hidden" name="branch" id="branch-name" value="<%=@branch_name%>" />
-  <div id="introduction" class="square">Intro</div>
-  <%= render :partial => @branch.forum_type %>
+  <!-- <div id="introduction" class="square">Intro</div> -->
+  <%= render :partial => @temp_partial %>
 
 </div>
 <div id="forum-upload" class="float-left">
