--- a/app/views/templates/_upload.html.erb
+++ b/app/views/templates/_upload.html.erb
@@ -12,14 +12,17 @@
     <%= flash[:notice] %>
   </div>
 		<% if template.name =~ /introduction/ %>
-		  <div class="title">Enter a name for this <%= template.class.name %></div>
+		<% if template.class.name == 'Vote'
+     klass_name = 'Vote/Poll"
+    %>
+		  <div class="title">Enter a name for this <%= klass_name %></div>
 		  <%= f.text_field :identifier %>
 		<% elsif !template.find_introduction %>
 		  <div class='error'>
        You have to upload Introdution Voice Prompt first
     </div>
 		<% else %>
-		  <%= f.hidden_field :identifier, :value=>"#{template.find_introduction.name}" %>
+		  <%= f.hidden_field :identifier, :value=>"#{template.find_introduction.identifer}" %>
 		<% end %>
 		<p></p>
   <h2>Select your <%= template.name.titleize %> file to upload</h2>
@@ -28,7 +31,7 @@
   </div>
   <div class="btnUploadWrap">
     <span><%= submit_tag 'Preview', :id=>"preview", :value=>"Upload (Preview)", :class=>"btnAction" %></span>
-    <% if @preview %>
+    <% if @preview || @save %>
       <span><%= submit_tag 'Save', :id=>"save", :class=>"btnAction" %></span>
     <% end %>
     <span><%= submit_tag 'Cancel', :id=>"cancel", :class=>"btnAction" %></span>
