--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,10 @@
   <!-- <META HTTP-EQUIV="refresh" CONTENT="60" /> -->
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag 'application.js' %>
-  <%= javascript_include_tag 'jquery.form.js' %>
+  <%#= javascript_include_tag 'jquery.form.js' %>
+  <!--
+  <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
+  -->
   <%= javascript_include_tag 'main.js' %>
   <%= stylesheet_link_tag "as_overrides" %>
   <%= csrf_meta_tags %>
