--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,5 @@
+<%= render :partial => 'shared/google_map' %>
+<!--
 <section id="home">
   <div class="equal">
     <a href="/events"><img src="assets/home-analytics.png" /></a>
@@ -12,3 +14,4 @@
     <a href="/health"><img src="assets/home-health.png" /></a>
   </div>
 </section>
+-->
