--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,19 +5,30 @@
   <!-- <META HTTP-EQUIV="refresh" CONTENT="60" /> -->
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag 'application.js' %>
-  <%= javascript_include_tag 'main.js' %>
-  <%= stylesheet_link_tag "as_overrides" %>
+  <%#= javascript_include_tag 'main.js' %>
+  <%#= stylesheet_link_tag "as_overrides" %>
   <%= csrf_meta_tags %>
   <%= yield :head %>
 </head>
 <body>
 <div class="overBg">
-  <%#= render :partial=>'/members/shared/header' %>
+  <%= render :partial=>'layouts/header' %>
   <div class="clear"></div>
+		<div class="left-sidebar">
+			 <%= render :partial=>'layouts/side_nav' %>
+		</div>
   <div class="contentHolder" id="contentHolder">
+  	 <div class="content" id="content">
     <%= yield %>
+				</div>
   </div>
+		<div class="clear"></div>
   <%= render :partial=>'layouts/footer' %>
 </div>
+<script>
+  jQuery(document).ready(function () { 
+     homePage.init();
+  });
+</script>
 </body>
 </html>
