ajax for modules on home page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
 </div>
 <script>
   jQuery(document).ready(function () { 
-     homePage.init();
+     homePage.init("content");
   });
 </script>
 </body>
