--- a/app/views/layouts/_side_nav.html.erb
+++ b/app/views/layouts/_side_nav.html.erb
@@ -1,12 +1,12 @@
-<div class="left-nav" id="entries" >
+<div class="left-nav" id="entries" data-url="/entries" >
 	  Moderation
 </div>
-<div class="left-nav" id="configure">
+<div class="left-nav" id="configure" data-url="/configure">
 	  Configure
 </div>
-<div class="left-nav" id="health">
+<div class="left-nav" id="health" data-url="/health">
 	  Health
 </div>
-<div class="left-nav" id="events">
+<div class="left-nav" id="events" data-url="/events">
 	  Analytics
 </div>
