--- a/app/views/shared/_google_map.html.erb
+++ b/app/views/shared/_google_map.html.erb
@@ -10,12 +10,20 @@ div#ft p {
     width: 500px;
     margin: 1em auto;
 }
-
+.tooltip { position:absolute;
+	width: 145px;
+	padding: 5px;
+	border: 1px solid gray;
+	font-size: 9pt;
+	font-family: Verdana;
+	background-color: #fff;
+	color: #000;
+}
 </style>
 
 <% data = []
    Branch.where("is_active=1 AND latitude is not null").each do |b|
-     data << {"description"=>"", "title"=>"", 
+     data << {:description=>"#{b.gmaps4rails_infowindow}", :title=>"#{b.gmaps4rails_infowindow}",  
        "lat"=> "#{b.latitude}", "lng"=>"#{b.longitude}", "picture"=> "assets/radio-wave.png",
        "width"=> "50", "height"=> "35" }
    end
@@ -23,6 +31,11 @@ div#ft p {
 %>
 
 <%= gmaps({
+ "map_options" => {:raw => '{scaleControl:true}', "key"=>"AIzaSyCV9RHwmQvNTaEkpeVAZhg5hwDmd7x6Ed8","type" => "ROADMAP", "center_latitude" =>32.930011, "center_longitude" => 43.417969, "zoom" => 3, "auto_adjust" => false},
+ "" => {}
+ })
+%>
+<%#= gmaps({
  "map_options" => {:raw => '{scaleControl:true}', "key"=>"AIzaSyCV9RHwmQvNTaEkpeVAZhg5hwDmd7x6Ed8","type" => "ROADMAP", "center_latitude" =>32.930011, "center_longitude" => 43.417969, "zoom" => 3, "auto_adjust" => false},
  "markers" => {"data" => "#{data.to_json}"},
  "" => {}
@@ -39,7 +52,26 @@ div#ft p {
 <script>
 jQuery(document).ready(function() {
 	  Gmaps.map.callback = function() {
-			   googleMapCallback();
-  };
+			    googleMapCallback();
+						
+						<% Branch.where("is_active=1 AND latitude is not null").each_with_index do |b, i| %>
+						  var infowindow<%=i%> = new google.maps.InfoWindow({
+           content: '<%= b.gmaps4rails_infowindow %>'
+        });
+        var myLatlng = new google.maps.LatLng(<%= b.latitude %>, <%= b.longitude %>);
+        var marker<%=i%> = new google.maps.Marker({
+            position: myLatlng,
+            map: Gmaps.map.map,
+												icon: "assets/radio-wave.png",
+            title: '<%= b.gmaps4rails_infowindow %>'
+        });
+        google.maps.event.addListener(marker<%=i%>, 'click', function() {
+           infowindow<%=i%>.open(Gmaps.map.map,marker<%=i%>);
+        });
+	     <% end %>
+						blinkeffect('img');
+   };
+	
+	  
 });
 </script>
