--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,34 +1,55 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>BBG IVR</title>
-  <!-- <META HTTP-EQUIV="refresh" CONTENT="60" /> -->
-  <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= javascript_include_tag 'application.js' %>
-  <%#= javascript_include_tag 'main.js' %>
-  <%#= stylesheet_link_tag "as_overrides" %>
-  <%= csrf_meta_tags %>
-  <%= yield :head %>
-</head>
-<body>
-<div class="overBg">
-  <%= render :partial=>'layouts/header' %>
-  <div class="clear"></div>
-		<div class="left-sidebar">
-			 <%= render :partial=>'layouts/side_nav' %>
-		</div>
-  <div class="contentHolder" id="contentHolder">
-  	 <div class="content" id="content">
-    <%= yield %>
-				</div>
-  </div>
-		<div class="clear"></div>
-  <%= render :partial=>'layouts/footer' %>
-</div>
-<script>
-  jQuery(document).ready(function () { 
-     homePage.init("content");
-  });
-</script>
-</body>
+  <head>
+    <title>BBG IVR</title>
+    <!-- <META HTTP-EQUIV="refresh" CONTENT="60" /> -->
+				<%= stylesheet_link_tag    "application", :media => "all" %>
+    <%= javascript_include_tag 'application.js' %>
+    <%#= javascript_include_tag 'main.js' %>
+    <%= stylesheet_link_tag "all" %>
+    <%= csrf_meta_tags %>
+    <%= yield :head %>
+  </head>
+  <body>
+    <div id="wrapper">
+      <!-- Start Left side nav -->
+      <nav id="sidebar">
+        <%= render :partial=>'shared/side_nav' %>
+      </nav>
+      <!-- End Left side nav --><!--Module is the container class of the right content area -->
+      <div class="module">
+        <!--Start Branch Caller and Activity Area-->
+        <div class="controls">
+          <%= render :partial=>'shared/header' %>
+        </div>
+        <!--End Branch Caller and Activity Area-->
+								
+								<!-- Put your map tool here. -->
+								<div class="content" id="content">
+									<p class="notice">
+          <%= notice %>
+         </p>
+         <p class="alert">
+          <%= alert %>
+        </p>
+          <%= yield %>
+        </div>
+								
+								
+								<!-- Start Activity area. This area set to have a top margin of 20px. -->
+        <div class="activity">
+           <%= render :partial=>'shared/activity' %>			
+        </div>
+        <!-- End Activity area -->
+      </div>
+      <!-- End Module -->
+    </div>
+    <!-- End Wrapper -->
+				<%= yield :scripts %> <!-- (in your footer) -->
+    <script>
+      jQuery(document).ready(function(){
+          homePage.init("content");
+      });
+    </script>
+  </body>
 </html>
