--- a/app/views/shared/_activity.html.erb
+++ b/app/views/shared/_activity.html.erb
@@ -9,18 +9,20 @@
       <%= e.branch.country.name %>
     </td>
     <td class="phone">
-      <%= e.branch.ivr_call_number %>
+      <%= @calls[e.branch.id] || 0 %>
     </td>
-    <td class="message">
-      <%= e.branch.entries.total_messages %>
+    <td class="message left-nav-bar" data-url="/entries">
+      <%= @messages[e.branch_id] || 0 %>
     </td>
-    <td class="alert">
-    	 <% started = e.branch.message_time_span.days.ago.beginning_of_day.to_s(:db) 
-         ended = Time.now.to_s(:db)
-       %>
-      <%= Stat.new(started, ended).alerted[e.branch.id] %>
+    <td class="alert left-nav-bar" data-url="/health">
+      <%= e.branch.health_image.html_safe %>
     </td>
   </tr>
   <tr>
   <% end %>
 </table>
+<script>
+  $(document).ready( function() {
+    blinkeffect('img.red-light');
+  });
+</script>
