--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,17 +1,10 @@
 <nav>						
 <ul>
-<% 
-   started = Branch.message_time_span.days.ago.to_s(:db)
-   ended = Time.now.to_s(:db)
-   alerts = Stat.new(started, ended).alerted[:total]
-   messages = Stat.new(started, ended).messages[:total]
-   calls = Stat.new(started, ended).number_of_calls[:total]
-%>
-<li><a ><%= calls %> Number of Calls</a></li>
-<li class="left-nav-bar" data-url="/entries"><a ><%= messages %> Messages</a></li>
-<li class="left-nav-bar" data-url="/health"><a ><%= alerts %> Alerts</a></li>
-
+<li><span class="last-days">(from last <%= Branch.message_time_span %> days)</span></li>
+<li><a ><%= @calls[:total] %> Number of Calls</a></li>
+<li class="left-nav-bar" data-url="/entries"><a ><%= @messages[:total] %> Messages</a></li>
+<li class="left-nav-bar" data-url="/health"><a ><%= @alerts %> Alerts</a></li>
 </ul>
 </nav>
-<h2>BRANCH CALLER AND ACTIVITY</h2>
+<h2>BRANCH CALLER AND ACTIVITY </h2>
 
