add lat, lon initially

--- a/app/views/shared/_google_map.html.erb
+++ b/app/views/shared/_google_map.html.erb
@@ -43,7 +43,8 @@ div#ft p {
 %>
 
 <div id="ft">
-  <p><strong>Latitude, Longitude:</strong> <span id="latlon"></span></p>
+  <p><strong>Latitude, Longitude:</strong> <span id="latlon">
+32.930011, 43.417969</span></p>
 </div>
 
 <script>
