--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -3,7 +3,7 @@
 <li><span class="last-days">(from last <%= Branch.message_time_span %> days)</span></li>
 <li><a ><%= @calls[:total] %> Number of Calls</a></li>
 <li class="left-nav-bar" data-url="/entries"><a ><%= @messages[:total] %> Messages</a></li>
-<li class="left-nav-bar" data-url="/health"><a ><%= @alerts %> Alerts</a></li>
+<li class="left-nav-bar" data-url="/health"><a ><%= @alerts[:total] %> Alerts</a></li>
 </ul>
 </nav>
 <h2>BRANCH CALLER AND ACTIVITY </h2>
