auto refresh header and activity sections

--- a/app/views/shared/_activity.html.erb
+++ b/app/views/shared/_activity.html.erb
@@ -18,11 +18,10 @@
       <%= e.branch.health_image.html_safe %>
     </td>
   </tr>
-  <tr>
   <% end %>
 </table>
 <script>
   $(document).ready( function() {
-    blinkeffect('img.red-light');
+  //  blinkeffect('img.red-light');
   });
 </script>
