--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,6 +49,8 @@
     <script>
       jQuery(document).ready(function(){
           homePage.init("content");
+          autoRefreshHeader.init();
+          blinkeffect('img.red-light');
       });
     </script>
   </body>
