fix /options route

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,7 +49,7 @@
     <script>
       jQuery(document).ready(function(){
           homePage.init("content");
-          autoRefreshHeader.init();
+        //  autoRefreshHeader.init();
           blinkeffect('img.red-light');
       });
     </script>
