--- a/app/views/branch/index.html.erb
+++ b/app/views/branch/index.html.erb
@@ -4,8 +4,10 @@
     <h4>Select Branch</h4>
     <form action="" method="get">
 						<% options = Branch.where("is_active=1").map{|b| [b.name, b.id]}
-         options.unshift ["--Select Branch--","0"] %>
-      <%= select_tag 'record[id]', options_for_select(options, '0'), :style=>'' %>
+         options.unshift ["--Select Branch--","0"] 
+         id = !!@branch ? @branch.id : 0
+      %>
+      <%= select_tag 'record[id]', options_for_select(options, id), :style=>'' %>
     </form>
 				<%= submit_tag 'Create New Branch', :id=>"create", :class=>"create-branch ZbtnAction" %>
   </div>
