--- a/app/views/templates/_vote_result.html.erb
+++ b/app/views/templates/_vote_result.html.erb
@@ -1,2 +1,2 @@
 <div id="introduction_result" class="square">Intro</div>
-<div id="candidate_result" class="square"><%= @result %></div>
+<div id="candidate_result" class="square"><%= @question %></div>
