--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
 							<% if @controller == 'home' %>
         <!--Start Branch Caller and Activity Area-->
         <div class="controls">
-          <%= render :partial=>'shares/header' %>
+          <%= render :partial=>'shared/header' %>
         </div>
         <!--End Branch Caller and Activity Area-->
 								<% elsif @controller == 'healthcheck' %>
