--- a/app/views/branch/index.html.erb
+++ b/app/views/branch/index.html.erb
@@ -9,7 +9,7 @@
       %>
       <%= select_tag 'record[id]', options_for_select(options, id), :style=>'' %>
     </form>
-				<%= submit_tag 'Create New Branch', :id=>"create", :class=>"create-branch ZbtnAction" %>
+				<%= submit_tag 'Create Branch', :id=>"create", :class=>"create-branch ZbtnAction" %>
   </div>
 		<div id="new-branch" class="float-left">
   
