--- a/app/views/shared/_side_nav.html.erb
+++ b/app/views/shared/_side_nav.html.erb
@@ -4,6 +4,6 @@
 <li class="left-nav-bar" data-url="/entries"><a class="moderation">Moderation</a></li>
 <li class="left-nav-bar" data-url="/branch"><a class="branch-configuration">Branch Configuration</a></li>
 <li class="left-nav-bar" data-url="/events"><a class="analytics">Analytics</a></li>
-<li class="left-nav-bar" data-url="/health"><a class="health-check">Health Check</a></li>
+<li class="left-nav-bar" data-url="/healthcheck"><a class="health-check">Health Check</a></li>
 </ul>
 
