--- a/app/views/healthcheck/index.html.erb
+++ b/app/views/healthcheck/index.html.erb
@@ -1,4 +1,9 @@
 <h2>Health Check</h2>
 <%= render :partial => 'shared/google_map' %>
 <%= render :partial => 'search' %>
+<script>
+	 jQuery(document).ready(function(){
+     search.init();
+  });
+</script>
 	
