change forum type labels

--- a/app/views/branch/index.html.erb
+++ b/app/views/branch/index.html.erb
@@ -28,13 +28,13 @@
   <div id="TabbedPanels1" class="TabbedPanels">
     <ul class="TabbedPanelsTabGroup">
       <li id="report" class="TabbedPanelsTab listen" tabindex="0">
-        <a href="#">Report</a>
+        <a href="#"><%= Branch.forum_type_ui('report') %></a>
       </li>
       <li id="vote" class="TabbedPanelsTab publish" tabindex="0">
-        <a href="#">Participate</a>
+        <a href="#"><%= Branch.forum_type_ui('vote') %></a>
       </li>
       <li id="bulletin" class="TabbedPanelsTab syndicate" tabindex="0">
-        <a href="#">Ask the Community</a>
+        <a href="#"><%= Branch.forum_type_ui('bulletin') %></a>
       </li>
     </ul>
 				<!--
